menambahkan fitur kirim contact form

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
+    <!-- favicon -->
+    <link rel=" shortcut icon" href="favicon/favicon-32x32.png" />
 
     <!-- Bootstrap Icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
@@ -60,7 +62,7 @@
     <!-- Awal Jumbotron -->
     <section class="jumbotron text-center">
       <img src="img/IMG-20210719-WA0017.jpg" alt="farras azhary" width="200" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4 fs-2">Muhamad Farras Azhary</h1>
+      <h1 class="display-4 fs-2 fw-bold">Muhamad Farras Azhary</h1>
       <p class="lead">Foto & Video Editor</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
@@ -83,23 +85,23 @@
         <div class="row justify-content-center fs-5 text-center">
           <div class="col-md-4">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus laborum velit harum, sint hic
-              temporibus non animi laboriosam molestiae nulla!
+              Hai, perkenalkan saya Muhamad Farras Azhary. saya merupakan konten kereator di media sosial YouTube. Saya
+              sangat senang mencoba hal-hal baru. Selain itu saya juga senang membuat video cinematic.
             </p>
           </div>
           <div class="col-md-4">
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor quos vitae ipsa? Veniam provident
-              similique maiores soluta quaerat officia numquam ex aliquid aperiam. Maiores, maxime?
+              Saya memiliki hobi yang menyenangkan yaitu Traveling, Fotography, dan Videography. setiap moment langka
+              yang saya temui, langsung saya abadikan menjadi berupa foto dan video.
             </p>
           </div>
         </div>
       </div>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
-          fill="rgb(124, 201, 231)"
+          fill="rgb(179, 236, 247)"
           fill-opacity="1"
-          d="M0,224L26.7,202.7C53.3,181,107,139,160,138.7C213.3,139,267,181,320,181.3C373.3,181,427,139,480,128C533.3,117,587,139,640,149.3C693.3,160,747,160,800,176C853.3,192,907,224,960,229.3C1013.3,235,1067,213,1120,197.3C1173.3,181,1227,171,1280,170.7C1333.3,171,1387,181,1413,186.7L1440,192L1440,320L1413.3,320C1386.7,320,1333,320,1280,320C1226.7,320,1173,320,1120,320C1066.7,320,1013,320,960,320C906.7,320,853,320,800,320C746.7,320,693,320,640,320C586.7,320,533,320,480,320C426.7,320,373,320,320,320C266.7,320,213,320,160,320C106.7,320,53,320,27,320L0,320Z"
+          d="M0,160L48,176C96,192,192,224,288,224C384,224,480,192,576,197.3C672,203,768,245,864,245.3C960,245,1056,203,1152,192C1248,181,1344,203,1392,213.3L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
         ></path>
       </svg>
     </section>
@@ -113,14 +115,14 @@
             <h2>My Projects</h2>
           </div>
         </div>
-        <div class="row">
+        <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
             <div class="card">
               <img src="img/project/1.jpg" class="card-img-top" alt="project 1" />
               <div class="card-body">
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up the bulk of the card's content.
-                </p>
+                <p>Pantai Tanjung Putat</p>
+                <p><i class="bi bi-geo-alt-fill" style="padding-right: 5px"></i>Belinyu, Bangka</p>
+                <p class="card-text">Shoot by Realme 3 Pro, Edited by Lightroom.</p>
               </div>
             </div>
           </div>
@@ -128,9 +130,9 @@
             <div class="card">
               <img src="img/project/2.jpg" class="card-img-top" alt="project 2" />
               <div class="card-body">
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up the bulk of the card's content.
-                </p>
+                <p>Mawar Putih</p>
+                <p><i class="bi bi-geo-alt-fill" style="padding-right: 5px"></i>Bumijawa, Tegal</p>
+                <p class="card-text">Shoot by Realme 3 Pro, Edited by Lightroom.</p>
               </div>
             </div>
           </div>
@@ -138,9 +140,25 @@
             <div class="card">
               <img src="img/project/3.jpg" class="card-img-top" alt="project 3" />
               <div class="card-body">
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up the bulk of the card's content.
-                </p>
+                <p>Bougenvile</p>
+                <p><i class="bi bi-geo-alt-fill" style="padding-right: 5px"></i>Bumijawa, Tegal</p>
+                <p class="card-text">Shoot by Realme 3 Pro, Edited by Lightroom.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <video src="video/VN20210411_211202.mp4" type="video/mp4" width="auto" controls></video>
+              <div class="card-body">
+                <p class="card-text">Shoot by Realme 3 Pro, Edited by VN Editor.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-3">
+            <div class="card">
+              <video src="video/VN20210607_121047.mp4" type="video/mp4" width="auto" controls></video>
+              <div class="card-body">
+                <p class="card-text">Shoot by Realme 3 Pro, Edited by VN Editor.</p>
               </div>
             </div>
           </div>
@@ -166,21 +184,30 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-6">
-            <form>
+            <div class="alert alert-success alert-dismissible fade show d-none" role="alert">
+              <strong>Terima Kasih!</strong> Pesan anda sudah kami terima.
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            <form name="rass-contact-form">
               <div class="mb-3">
                 <label for="name" class="form-label">Nama Lengkap</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name" />
+                <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" />
+                <input type="email" class="form-control" id="email" aria-describedby="email" name="email" />
               </div>
               <div class="mb-3">
                 <label for="pesan" class="form-label">Pesan</label>
-                <textarea class="form-control" id="pesan" rows="3"></textarea>
+                <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
               </div>
 
-              <button type="submit" class="btn btn-success">Kirim</button>
+              <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
+
+              <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+                Loading...
+              </button>
             </form>
           </div>
         </div>
@@ -189,14 +216,14 @@
         <path
           fill="#0d6efd"
           fill-opacity="1"
-          d="M0,160L30,165.3C60,171,120,181,180,176C240,171,300,149,360,144C420,139,480,149,540,138.7C600,128,660,96,720,112C780,128,840,192,900,197.3C960,203,1020,149,1080,133.3C1140,117,1200,139,1260,144C1320,149,1380,139,1410,133.3L1440,128L1440,320L1410,320C1380,320,1320,320,1260,320C1200,320,1140,320,1080,320C1020,320,960,320,900,320C840,320,780,320,720,320C660,320,600,320,540,320C480,320,420,320,360,320C300,320,240,320,180,320C120,320,60,320,30,320L0,320Z"
+          d="M0,160L48,176C96,192,192,224,288,224C384,224,480,192,576,197.3C672,203,768,245,864,245.3C960,245,1056,203,1152,192C1248,181,1344,203,1392,213.3L1440,224L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
         ></path>
       </svg>
     </section>
     <!-- Akhir Contact -->
 
     <!-- Footer -->
-    <footer class="bg-primary text-white text-center pb-5">
+    <footer class="bg-primary text-white text-center pb-2">
       <p>
         Created with <i class="bi bi-suit-heart-fill text-danger"></i> by
         <a href="https://www.instagram.com/farras_azhary/" class="text-white fw-bold">Farras Azhary</a>
@@ -209,5 +236,34 @@
       integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
       crossorigin="anonymous"
     ></script>
+
+    <script>
+      const scriptURL =
+        'https://script.google.com/macros/s/AKfycbwkfzp1ryK5BoiGR_rQVJDLWVPi6P2ZOjp46NdThmwPh4p2jziwKSLVCC6Y0NNB8DAKcw/exec';
+      const form = document.forms['rass-contact-form'];
+      const btnKirim = document.querySelector('.btn-kirim');
+      const btnLoading = document.querySelector('.btn-loading');
+      const alert = document.querySelector('.alert');
+
+      form.addEventListener('submit', (e) => {
+        e.preventDefault();
+        // ketika tombol submit diklik
+        // hilangkan tombol kirim, tampilkan tombol loading
+        btnLoading.classList.toggle('d-none');
+        btnKirim.classList.toggle('d-none');
+        fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+          .then((response) => {
+            // hilangkan tombol loading, tampilkan tombol kirim
+            btnLoading.classList.toggle('d-none');
+            btnKirim.classList.toggle('d-none');
+            // tampilkan alert
+            alert.classList.toggle('d-none');
+            // reset form
+            form.reset();
+            console.log('Success!', response);
+          })
+          .catch((error) => console.error('Error!', error.message));
+      });
+    </script>
   </body>
 </html>
