mengubah margin profile

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- Awal Jumbotron -->
     <section class="jumbotron text-center">
       <img src="img/IMG-20210719-WA0017.jpg" alt="farras azhary" width="200" class="rounded-circle img-thumbnail" />
-      <h1 class="display-4 fs-2 fw-bold">Muhamad Farras Azhary</h1>
+      <h1 class="display-4 fs-2 fw-bold mt-4">Muhamad Farras Azhary</h1>
       <p class="lead">Foto & Video Editor</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
